// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FixRecord form submission payload should submit fix record data 1`] = `"{"issue":"Added comments: \\n          my comments"}"`;

exports[`Component FixRecord form submission payload should submit fix record data with new content indicator and file 1`] = `"{"issue":"Added comments: \\n          my comments \\n\\n                Added files: \\n          test.png \\n\\n        Selected Content Indicator(s): \\n          Case Study"}"`;

exports[`Component FixRecord form submission payload should submit fix record data with new content indicator and file 2`] = `"{"rek_pid":"UQ:41878","fez_record_search_key_file_attachment_name":[{"rek_file_attachment_name":"test.png","rek_file_attachment_name_order":1}],"fez_record_search_key_file_attachment_embargo_date":[],"fez_record_search_key_file_attachment_access_condition":[{"rek_file_attachment_access_condition":1,"rek_file_attachment_access_condition_order":1}],"fez_record_search_key_file_attachment_security_policy":[],"fez_record_search_key_content_indicator":[{"rek_content_indicator":454079,"rek_content_indicator_order":1},{"rek_content_indicator":454080,"rek_content_indicator_order":2},{"rek_content_indicator":454081,"rek_content_indicator_order":3}]}"`;

exports[`Component FixRecord form submission payload should submit fix record data with new content indicator and file 3`] = `
File {
  "path": "test.png",
}
`;

exports[`Component FixRecord form submission payload should submit unclaim data 1`] = `"{"rek_pid":"UQ:41878","fez_record_search_key_author_id":[{"rek_author_id_pid":"UQ:41878","rek_author_id":0,"rek_author_id_order":1},{"rek_author_id":0,"rek_author_id_order":2},{"rek_author_id_pid":"UQ:41878","rek_author_id":786,"rek_author_id_order":3},{"rek_author_id_pid":"UQ:41878","rek_author_id":687,"rek_author_id_order":4},{"rek_author_id_pid":"UQ:41878","rek_author_id":4100,"rek_author_id_order":5}],"fez_record_search_key_contributor_id":[]}"`;

exports[`Component FixRecord form submission payload should submit unclaim data 2`] = `"{"pid":"UQ:41878","type":"H"}"`;

exports[`Component FixRecord should render fix record form 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <form>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-3 css-1u8xl8z-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                  />
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                  />
                </div>
                <div
                  class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
                  style="width: 100%;"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    id="fix-action-label"
                  >
                    Select an action
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiSelect-root css-119uwq1-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="fix-action"
                    required=""
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="fix-action-select"
                      aria-required="true"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      data-testid="fix-action-select"
                      id="fix-action-select"
                      role="combobox"
                      tabindex="0"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      aria-labelledby="fix-action-label"
                      class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                      data-analyticsid="fix-action-input"
                      data-testid="fix-action-input"
                      id="fix-action-input"
                      name="fixAction"
                      required=""
                      tabindex="-1"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-1peu8cu-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-1lu29ow-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth css-15rrvmf-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render loader when author is loading 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1s5ig73-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
      />
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
        style="text-align: center;"
      >
        <span
          aria-label="Loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-kl1ura-MuiTypography-root"
          style="font-size: 1.33rem;"
        >
          Loading work
        </span>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render loader when record is loading 1`] = `
<div>
  <div
    style="padding: 8px;"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1s5ig73-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
      />
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
        style="text-align: center;"
      >
        <span
          aria-label="Loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 18px; height: 18px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="21"
              stroke-width="2"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
        style="text-align: center;"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 css-kl1ura-MuiTypography-root"
          style="font-size: 1.33rem;"
        >
          Loading work
        </span>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1idtt4c-MuiGridLegacy-root"
      />
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render record citation, two actions in select field and a cancel button 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <form>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-3 css-1u8xl8z-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                  />
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                  />
                </div>
                <div
                  class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
                  style="width: 100%;"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="false"
                    id="fix-action-label"
                  >
                    Select an action
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiSelect-root css-119uwq1-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="fix-action"
                    required=""
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="fix-action-select"
                      aria-required="true"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      data-testid="fix-action-select"
                      id="fix-action-select"
                      role="combobox"
                      tabindex="0"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      aria-labelledby="fix-action-label"
                      class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                      data-analyticsid="fix-action-input"
                      data-testid="fix-action-input"
                      id="fix-action-input"
                      name="fixAction"
                      required=""
                      tabindex="-1"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-1peu8cu-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-1lu29ow-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth css-15rrvmf-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Component FixRecord should render unclaim form 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container StandardPage css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-10k4br5-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Request a correction, add more information or upload files
      </h2>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-sxhaxy-MuiGridLegacy-root"
    >
      <form>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-3 css-1u8xl8z-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-work-to-be-amended"
              id="standard-card-work-to-be-amended"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-work-to-be-amended-header"
                    id="standard-card-work-to-be-amended-header"
                  >
                    Work to be amended
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-work-to-be-amended-content"
                data-testid="standard-card-work-to-be-amended-content"
                id="standard-card-work-to-be-amended-content"
              >
                <div
                  class="publicationCitation"
                >
                  <div
                    class="css-0"
                    data-testid="publication-citation-parent-UQ:41878"
                    id="publication-citation-parent-UQ:41878"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                        >
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
                            style="min-width: 1px;"
                          >
                            <h6
                              class="MuiTypography-root MuiTypography-h6 PublicationCitation-citationTitle css-6on8jz-MuiTypography-root"
                            >
                              <a
                                href="/view/UQ:41878"
                              >
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                              </a>
                            </h6>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-1ulg1rp-MuiGridLegacy-root"
                          >
                            <div
                              class="citationContent citationJournalArticle"
                            >
                              <span
                                class="citationAuthors"
                              >
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-0"
                                >
                                  Brown, M. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-1"
                                >
                                  He, Y.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-2"
                                >
                                  Rothnagel, J. A.
                                </span>
                                , 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-3"
                                >
                                  Saunders, N. A.
                                </span>
                                , 
                                 and 
                                <span
                                  class="citationAuthor"
                                  data-testid="rek-author-4"
                                >
                                  Smith, R.
                                </span>
                                 
                              </span>
                              <span
                                class="citationDate"
                              >
                                (
                                2004
                                ).
                              </span>
                              <span
                                class="citationTitle"
                              >
                                 
                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
                                .
                              </span>
                              <span
                                class="citationJournalName"
                              >
                                 
                                Molecular Biology of The Cell
                                 
                              </span>
                              <span
                                class="citationVolumeNumber"
                              >
                                 
                                15
                                 
                              </span>
                              <span
                                class="citationIssueNumber empty"
                              />
                              <span
                                class="citationArticleNumber empty"
                              />
                              <span
                                class="citationPageRange"
                              >
                                <span
                                  class="citationStartPage"
                                >
                                  252A
                                </span>
                                -
                                <span
                                  class="citationEndPage"
                                >
                                  253A
                                </span>
                              </span>
                              <span>
                                . 
                              </span>
                              <span
                                class="citationDOI empty"
                              />
                            </div>
                          </div>
                          <div
                            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                          >
                            <div
                              class="MuiGridLegacy-root MuiGridLegacy-container css-4zaipq-MuiGridLegacy-root"
                            >
                              <div
                                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-wx9gf7-MuiGridLegacy-root"
                              >
                                <div
                                  class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
                                >
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
                                  >
                                    <a
                                      aria-label="Full citation in Web of science will open in a new window"
                                      class="wosCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D000224648802120"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Web of science will open in a new window"
                                    >
                                      <span
                                        class="fez-icon wos large"
                                      />
                                      <span
                                        class="MuiBox-root css-19k1sqg"
                                      >
                                        2
                                      </span>
                                    </a>
                                    <a
                                      aria-label="Full citation in Google scholar will open in a new window"
                                      class="googleCitationCount css-si3g8d"
                                      data-analyticsid="citation-count-link"
                                      data-testid="citation-count-link"
                                      href="https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth"
                                      id="citation-count-link"
                                      rel="noopener noreferrer"
                                      tabindex="0"
                                      target="_blank"
                                      title="Full citation in Google scholar will open in a new window"
                                    >
                                      <span
                                        class="fez-icon google large"
                                      />
                                    </a>
                                    <span
                                      class="noOaIcon"
                                      data-testid="oa-n/a-icon"
                                    />
                                  </div>
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
                                  />
                                  <div
                                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
                      >
                        <span
                          class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                          data-testid="rek-content-indicator"
                          id="rek-content-indicator"
                        >
                          <div
                            class="MuiBox-root css-w4835h"
                          >
                            Content Indicators
                            :
                          </div>
                          Scholarship of Teaching and Learning, Protocol
                        </span>
                      </div>
                    </div>
                  </div>
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth css-zww2ny-MuiDivider-root"
                  />
                </div>
                <div
                  class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
                  style="width: 100%;"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-focused Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-c95u6h-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="true"
                    id="fix-action-label"
                  >
                    Select an action
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-focused MuiInputBase-formControl MuiSelect-root css-119uwq1-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="fix-action"
                    required=""
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="fix-action-select"
                      aria-required="true"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      data-testid="fix-action-select"
                      id="fix-action-select"
                      role="combobox"
                      tabindex="0"
                    >
                      I am not the author/editor/contributor of this work - I would like this work removed from my profile
                    </div>
                    <input
                      aria-hidden="true"
                      aria-invalid="false"
                      aria-labelledby="fix-action-label"
                      class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                      data-analyticsid="fix-action-input"
                      data-testid="fix-action-input"
                      id="fix-action-input"
                      name="fixAction"
                      required=""
                      tabindex="-1"
                      value="unclaim"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-remove-this-work-from-my-profile"
              id="standard-card-remove-this-work-from-my-profile"
              style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
            >
              <div
                class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                    data-testid="standard-card-remove-this-work-from-my-profile-header"
                    id="standard-card-remove-this-work-from-my-profile-header"
                  >
                    Remove this work from my profile
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                data-analyticsid="standard-card-remove-this-work-from-my-profile-content"
                data-testid="standard-card-remove-this-work-from-my-profile-content"
                id="standard-card-remove-this-work-from-my-profile-content"
              >
                <div
                  data-testid="alert"
                  style="margin-top: 5px;"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-container css-xsukhl-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-true css-40g213-MuiGridLegacy-root"
                    >
                      <div
                        class="MuiGridLegacy-root MuiGridLegacy-container css-mcuokg-MuiGridLegacy-root"
                      >
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-item alert-icon css-19gcae9-MuiGridLegacy-root"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-1umw9bq-MuiSvgIcon-root"
                            data-testid="WarningIcon"
                            focusable="false"
                            id="warning-icon"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true alert-text css-1s0jjal-MuiGridLegacy-root"
                        >
                          <b>
                            WARNING - 
                          </b>
                          <span
                            data-testid="alert-message"
                          >
                            You are about to remove this work from your eSpace profile.
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="MuiBox-root css-0"
                  data-testid="confirmDialogBox"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-1peu8cu-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-1lu29ow-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorDefault MuiButton-fullWidth css-15rrvmf-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-1lu29ow-MuiGrid-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-qh3gja-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="fixSubmit"
              data-testid="fix-submit"
              id="fixSubmit"
              tabindex="0"
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
